--- a/src/html/web.html
+++ b/src/html/web.html
@@ -26,8 +26,8 @@
 <head>
   <title>ChronoChat</title>
   <link rel="stylesheet" type="text/css" href="../lib/bootstrap/bootstrap.css" />
-  <link rel="stylesheet" type="text/css" href="../css/connect.css" />
-  <link rel="stylesheet" type="text/css" href="../css/chat.css" />
+  <link rel="stylesheet" type="text/css" href="../assets/css/connect.css" />
+  <link rel="stylesheet" type="text/css" href="../assets/css/chat.css" />
   <meta charset="utf-8">
 
   <script src="../lib/jquery-1.10.1.min.js"></script>
@@ -92,8 +92,4 @@
       </div>
     </div>
   </div>
-  <script>
-    // You can also require other files to run in this process
-    require('../js/renderer.js');
-  </script>
 </html>
