small updates for memoria IP

--- a/src/html/web.html
+++ b/src/html/web.html
@@ -57,7 +57,7 @@
       <input id="hubPrefix" class="field" type="text" value="ndn/edu/ucla/remap" onFocus="fieldFocus(this, 'ndn/edu/ucla/remap');"
         onblur="fieldBlur(this, 'ndn/edu/ucla/remap');" />
       <p class="label">Hub</p>
-      <input id="hub" class="field" type="text" value="spurs.cs.ucla.edu" onFocus="fieldFocus(this, 'spurs.cs.ucla.edu');" onblur="fieldBlur(this, 'spurs.cs.ucla.edu');"
+      <input id="hub" class="field" type="text" value="128.97.98.8" onFocus="fieldFocus(this, '128.97.98.8');" onblur="fieldBlur(this, '128.97.98.8');"
       />
       <p id="microForwarderLabel" class="label">micro forwarder</p>
       <div id="microForwarder">
